--- a/CSC3045-CS2-Frontend/CSC3045-CS2/MainWindow.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/MainWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Icon="Resources/Images/Logo/waterfall icon.png"
         WindowStartupLocation="CenterScreen"
-        MinWidth="400"
-        MinHeight="300"
-        Title="MainWindow" Height="500" Width="525">
+        MinWidth="1060"
+        MinHeight="600"
+        Title="MainWindow" Width="1060" Height="600">
     <!-- Min and Max Width/Height of the window can be specified here in the above tag-->
     
     <Frame x:Name="frame" Content="Frame" Margin="0" Source="Pages/Login.xaml"/>
