--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -6,26 +6,19 @@
       xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
-      d:DesignHeight="375" d:DesignWidth="300"
+      d:DesignHeight="600" d:DesignWidth="1060"
       Title="Register">
 
     <StackPanel>
         <TextBlock Name="PageTitle" Text="Registration" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,10"/>
 
-        <Grid Margin="100,0,100,0">
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-               
-            </Grid.RowDefinitions>
-
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2">
+            <StackPanel Grid.Column="0">
                 <AdornerDecorator>
                     <TextBox Name="FirstnameTextBox" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0"  Grid.Row="0">
                         <utility:WatermarkService.Watermark>
@@ -36,16 +29,15 @@
 
                 <AdornerDecorator>
                     <TextBox Name="SurnameTextBox" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0"  Grid.Row="1">
-                    <utility:WatermarkService.Watermark>
+                        <utility:WatermarkService.Watermark>
                             <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center"  Name="SurnameTextBlock">Surname</TextBlock>
-                    </utility:WatermarkService.Watermark>
+                        </utility:WatermarkService.Watermark>
                     </TextBox>
                 </AdornerDecorator>
-               
             </StackPanel>
 
-            <DockPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="2">
-                <Button Name="ProfileButton" Margin="30,6,0,4" Grid.Column="2" Click="ProfileButton_Click"/>
+            <DockPanel Grid.Column="1">
+                <Button Name="ProfileButton" Margin="30,0,0,0" Click="ProfileButton_Click"/>
             </DockPanel>
         </Grid>
         
