--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -10,9 +10,81 @@
       Title="Sprint Dashboard">
 
     <StackPanel>
-        <ContentControl Template="{StaticResource Headers}" Name="Header" ></ContentControl>
 
-        <ListBox Name="SprintTeamListBox" ItemsSource="{Binding CurrentSprint.Users}" HorizontalContentAlignment="Center">
+        
+        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
+        <Grid Margin ="20,20,20,0">
+            <Grid.ColumnDefinitions >
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+            <ListBox Name="SprintTeamListBox" Margin ="20,0,15,0" Grid.Row ="0" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemsSource="{Binding CurrentSprint.Users}" Grid.Column="0" HorizontalContentAlignment="Center">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0} {1}     {2}">
+                                        <Binding Path="Forename"/>
+                                        <Binding Path="Surname"/>
+                                        <Binding Path="Email"/>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+
+
+                            <TextBlock Grid.Column="1" Text="{Binding Email}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <ListBox Name="SprintBacklog"   Margin ="0,0,15,0" Grid.Row ="0" Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemsSource="{Binding UserStories}" HorizontalContentAlignment="Center">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" VerticalAlignment="Center" TextWrapping="Wrap"  Margin ="0,0,20,0" HorizontalAlignment="Left" MaxWidth="80">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0}">
+                                        <Binding Path="Name"/>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                            <TextBlock Grid.Column="1"  Margin ="20,0,20,0" TextWrapping="Wrap" HorizontalAlignment="Center" MaxWidth="120">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0}">
+                                        <Binding Path="Description"/>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                            <Button Grid.Column="2" Margin ="20,0,0,0" Name="AddTask" HorizontalAlignment="Right" Content="Add Task" Style="{StaticResource StandardButton}"  
+                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.TaskCommand}"/>
+
+
+
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}">
+                        <EventSetter Event="PreviewMouseDoubleClick" Handler="ListBox_MouseDoubleClick" />
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+            <ListBox Name="StoryTasks" Margin ="20,5,15,0"  Grid.Row ="1" Grid.Column="1" ScrollViewer.VerticalScrollBarVisibility="Visible" ItemsSource="{Binding Tasks}" HorizontalContentAlignment="Center">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -23,25 +95,28 @@
                         <TextBlock Grid.Row="0">
                             <TextBlock.Text>
                                 <MultiBinding StringFormat="{}{0} {1}">
-                                    <Binding Path="Forename"/>
-                                    <Binding Path="Surname"/>
+                                    <Binding Path="Name"/>
+                                    <Binding Path="Description"/>
                                 </MultiBinding>
                             </TextBlock.Text>
                         </TextBlock>
 
-                        <TextBlock Grid.Column="1" Text="{Binding Email}"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-        </ListBox>
-
-        <Button Name="EditSprintTeam"
+            </ListBox>
+            <Button   Grid.Row ="2" Name="EditSprintTeam"
                 Content="Edit Team"
                 Style="{StaticResource StandardButton}"
                 HorizontalAlignment="Center"
                 Command="{Binding NavigateToManageSprintsCommand}"
                 Visibility="{Binding Path=Permissions.ScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
-        <Button Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Command="{Binding BackCommand}"/>
+            <Button  Grid.Row ="2" Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Grid.Column="2" Command="{Binding BackCommand}"/>
 
+
+        </Grid>
+       
+
+       
     </StackPanel>
 </local:BasePage>
